--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Myon's Porfolio</title>
+
+    <!----------Simple Line Icons---------->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+        <!----------FOnt Awesome---------->
+        <script src="https://kit.fontawesome.com/8ce81819d5.js" crossorigin="anonymous"></script>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
